@@ -1,0 +1,6 @@
+# @configure_input@
+version = "[distributed with OCaml]"
+description = "Dynamic loading and linking of object files"
+directory = "+dynlink"
+archive(byte) = "dynlink.cma"
+archive(native) = "@natdynlink_archive@"
