@@ -1,0 +1,7 @@
+description = "Unix system calls"
+version = "[distributed with OCaml]"
+directory = "+unix"
+archive(byte) = "unix.cma"
+archive(native) = "unix.cmxa"
+plugin(byte) = "unix.cma"
+plugin(native) = "unix.cmxs"
